<resources>

	<string name="app_name">TsuyoponMonster</string>
	<string name="menu_end">終了する</string>
	<string name="title_activity_title">つよぽん</string>
	<string name="title_title">ツ  ヨ  ポ  ン</string>
		<string name="title_start">初めから</string>
	<string name="title_continue">続きから</string>
	<string name="title_battle">通信対戦</string>
	<string name="bring_HP">HP:</string>
	<string name="bring_quickness">すばやさ:</string>
	<string name="bring_power">こうげき:</string>
	<string name="bring_kind">なつき度:</string>
	<string name="bring_stomach_gauge">まんぷく度:</string>
	<string name="bring_luck">運:</string>
	<string name="bring_life">ねんれい:</string>
	<string name="bring_run">走る</string>
	<string name="bring_mascle_training">筋トレ</string>
	<string name="bring_doping">ドーピング</string>
	<string name="bring_praise">ほめる</string>
	<string name="bring_bait">エサをあげる</string>
	<string name="bring_sleep">ねむる</string>
	<string name="yes">はい</string>
	<string name="no">いいえ</string>
	<string name="save_text">保存する場所を選んで下さい。</string>
	<string name="save_toast_text">保存しました</string>
	<string name="alert_title">確認</string>
	<string name="alert_message">保存せずにタイトルへ戻りますか？</string>
	<string name="birth_message">モンスターデータは保存されませんがよろしいですか？</string>
	<string name="save_and_title">データを保存してタイトルに戻ります。</string>
	<string name="exit_app">もう一度おすと終了するよ！</string>
	<string name="no_data">NO DATA</string>
	<string name="no_continue">続きからはじめるデータがありません</string>
	<string name="saved_monster">モンスター一覧</string>
	<string name="prompt">戦わすモンスターの選択</string>
	<string name="cancel_bt">bluetoothをonにしないと対戦できないですぅ</string>
	<string name="title_other_devices">対戦相手を探しています</string>
	<string name="scanning">しばらくお待ち下さい</string>
	<string name="rewrite">データを書き換えます,よろしいですか</string>
	<string name="none_found">みつかりませんでした</string>
	<string name="select_device">登録するデバイスを選択してください</string>
	<string name="ensure">相手に自分の端末を検出できるようにする</string>
</resources>