<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#00ff00"
	android:orientation="horizontal" >

    <LinearLayout
    	android:layout_width="wrap_content"
    	android:layout_height="fill_parent"
    	android:layout_weight="7"
    	android:orientation="vertical" >

        <ImageView
        	android:id="@+id/titleView"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
        	android:scaleType="center"
        	android:src="@drawable/tsuyopon_logo"
        	android:text="@string/title_title"
        	android:textSize="@dimen/title_size" />

        <ImageView
        	android:id="@+id/titleMonsterIcon"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:paddingBottom="@dimen/padding_small"
        	android:paddingLeft="@dimen/padding_medium"
        	android:src="@drawable/kimokawa" />

    </LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<Button
			android:id="@+id/toStart"
			style="@style/title_button"
			android:layout_marginTop="@dimen/padding_medium"
			android:background="@drawable/title_button_frame"
			android:onClick="click"
			android:text="@string/title_start" />

		<Button
			android:id="@+id/toContinue"
			style="@style/title_button"
			android:background="@drawable/title_button_frame"
			android:onClick="click"
			android:text="@string/title_continue" />

		<Button
			android:id="@+id/toBattle"
			style="@style/title_button"
			android:layout_marginBottom="@dimen/padding_medium"
			android:background="@drawable/title_button_frame"
			android:onClick="click"
			android:text="@string/title_battle" />

	</LinearLayout>

</LinearLayout>